Fix sticky columns widths, fix scrollbar using wrong table scroll position

--- a/examples/index.css
+++ b/examples/index.css
@@ -13,3 +13,7 @@
 .sticky-table-x-wrapper .sticky-table-cell {
     background-color: blue;
 }
+
+.sticky-table-cell {
+    border: 1px solid palevioletred;
+}
